# books

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/books/: __init__.py  _api.py  main.py  tags.py
